# ghanon

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  Taskfile.yml  coverage.json  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: tdd_green.agent.md  tdd_red.agent.md  tdd_refactor.agent.md
.github/workflows/: ci.yml
__snapshots/: snap-test_cli_help_output.json  snap-test_workflow_model.json  snap-test_workflow_to_dict.json  snap-test_yaml_parsing.json
features/: ghanon.feature  workflow_validation.feature
ghanon/: cli.py  formatter.py  logger.py  parser.py  yaml.py
ghanon/domain/: enums.py  jobs.py  workflow.py
ghanon/models/: __init__.py  base.py  concurrency.py  container.py  defaults.py  enums.py  environment.py  events.py  jobs.py  matrix.py  permissions.py  step.py  types.py  workflow.py
scripts/: test-install.ps1  test-install.sh
tests/: conftest.py  test_activity_type_event.py  test_cli.py  test_concurrency.py  test_container.py  test_defaults.py  test_edge_cases.py  test_environment.py  test_events.py  test_ghanon.py  test_matrix.py  test_normal_job.py  test_permissions.py  test_pull_request_event.py  test_pull_request_target_event.py  test_push_event.py  test_reusable_workflow_call_job.py  test_round_trip.py  test_schedule_event.py  test_step.py  test_strategy.py  test_workflow.py  test_workflow_call_event.py  test_workflow_dispatch_event.py  test_workflow_model.py  test_workflow_parsing.py  test_workflow_run_event.py  test_yaml_loader.py  test_yaml_parsing.py
tests/fixtures/: basic_yaml.yml  complex_workflow.yml  on_boolean_fix.yml  simple_workflow.yml
