[project]
name = "ghanon"
version = "0.1.0"
description = "The GitHub Actions Best Practices Linter"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.5",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "assertpy>=1.1",
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]
