[project]
name = "ghanon"
version = "0.1.0"
description = "The GitHub Actions Best Practices Linter"
authors = [
    { name = "Niko Heikkilä", email = "yo@nikoheikkila.fi" }
]
license = { file = "LICENSE" }
requires-python = ">=3.14"
readme = "README.md"
keywords = ["github", "actions", "linter", "best practices", "ci/cd"]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Typing :: Typed"
]
dependencies = [
    "click>=8.3.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.2",
]

[project.urls]
homepage = "https://github.com/nikoheikkila/ghanon"
repository = "https://github.com/nikoheikkila/ghanon.git"
documentation = "https://github.com/nikoheikkila/ghanon/blob/master/README.md"
changelog = "https://github.com/nikoheikkila/ghanon/blob/master/CHANGELOG.md"
issues = "https://github.com/nikoheikkila/ghanon/issues"

[dependency-groups]
dev = [
    "assertpy>=1.1",
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D102",  # Missing docstring in public method - not required in tests
    "ANN001",  # Missing type annotation for function argument - not required in tests
    "ANN201",  # Missing return type annotation for public function - not required in tests
    "S108",  # Probable insecure usage of temporary file or directory - false positive in tests
]
"main.py" = [
    "T201",  # Entrypoint is allowed to use print()
    "FBT001" # Boolean options in CLI are allowed
]
